#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([prms], [5.1.0], [https://github.com/nhm-usgs/prms/issues])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_CONFIG_SUBDIRS([mmf src])
AC_OUTPUT
