noinst_LIBRARIES = libmmf.a

libmmf_a_SOURCES = build_lists.c call_modules.c call_setdims.c		\
	check_vars.c control_addr.c control_array.c control_var.c	\
	create_vstats.c decl_control.c decldim.c declparam.c		\
	declvar.c dim_addr.c free_vstats.c globals.c get_elem_add.c	\
	get_times.c getdim.c getdimname.c getparam.c getvar.c		\
	graph_single_run.c julconvert.c julday.c load_param.c		\
	param_addr.c parse_args.c print_model_info.c print_params.c	\
	print_vars.c putvar.c read_control.c read_datainfo.c		\
	read_line.c read_params.c read_vars.c readvar.c reset_dim.c	\
	save_params.c setup_cont.c sort_dims.c sort_params.c		\
	sort_vars.c str_to_vals.c timing.c umalloc_etc.c var_addr.c	\
	write_vstats.c

CLEANFILES = *~
